Fix map legend on mobile devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,7 +20,7 @@
 	left: 0;
 	background-color: rgba(255,255,255,0.5);
 	border:1px solid black;
-	width: 27vw;
+
 }
 
 /* Other */
